--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,3 +1,7 @@
+<div class="home">
 <h1>Welcome to Bike Berlin</h1>
 <h2>Your source for used bikes in Berlin</h2>
-<%= image_tag("logo.jpg", class: "img-responsive", id: "logo") %>
+<div id="homeImg">
+<%= image_tag("webdevcloud.jpg", class: "img-responsive", id: "devcloud") %>
+</div>
+</div>
