--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,29 +2,49 @@
 <html>
 <head>
   <title>Workspace</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <!--start of bootstrap-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
+  integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
+  crossorigin="anonymous">
+  <!--end of bootstrap-->
+  <!--My JS-->
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <!--My JS-->
+  <!--beginning of JS-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" 
+  integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" 
+  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" 
+  integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" 
+  crossorigin="anonymous"></script>
+  <!--End of JS-->
+  <!--responsive mobile friendly tag-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= csrf_meta_tags %>
+  <!--responsive mobile friendly tag-->
+  <!--My CSS-->
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <!--My CSS-->
 </head>
 <body>
+ 
+    <div id="logo">
+      <%= image_tag("logo.jpg", class: "img-responsive", id: "logo") %>
+    </div>
+  <div class = nav>
+    
+     <%= link_to "Home", root_path %>
+      <%= link_to "About", simple_pages_about_path %>
+      <%= link_to "Contact", simple_pages_contact_path %>
+  </div>
+   <div id="content">
   
-<nav>
-  <ul>
-    <li><%= link_to "Home", root_path %></li>
-    <li><%= link_to "About", simple_pages_about_path %></li>
-    <li><%= link_to "Contact", simple_pages_contact_path %></li>
-  </ul>
-</nav>
-
-
-<%= yield %>
-
-<footer>
-  &copy; 2018 Bike Berlin
-</footer>
+    <%= yield %>
+ 
+  </div>
+  <footer>
+    <p>&copy; 2018 Patrick Colletta</p>
+  </footer>
+   
 
 </body>
 </html>
