--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,4 +1,3 @@
 <div class="about">
-<h1>About</h1>
-<p>Not sure what app I am building need to fill this out later.</p>
+    <p class="discription">elevator pitch</p>
 </div>
