--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,4 +1,3 @@
 <div class="contact">
-<h1>Contact</h1>
-<p>Not sure what type of app I am build yet.</p>
+    <p style="padding-top: 2%;">Welcome</p>
 </div>
