--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,7 +1,51 @@
+
 <div class="home">
-<h1>Welcome to Bike Berlin</h1>
-<h2>Your source for used bikes in Berlin</h2>
-<div id="homeImg">
-<%= image_tag("webdevcloud.jpg", class: "img-responsive", id: "devcloud") %>
+    
+        <p style="padding-top: 2%;">Featured Products</p>
+        <p>Pharagraph about featured products</p>
+   
+        <div class= "container-fluid" id= "productLines">
+        <div class="row" id="work">
+            <div class="col-md-4">
+            <div class="homeImg">
+                <h3>Title</h3>
+                <%= image_tag("webdevcloud.jpg", class: "img-responsive", id: "productLine1") %>
+                <p><a type="button" class="btn btn-primary"  href="#portfolio" data-toggle="item3" data-placement="bottom" title="Go to portfolio">View More &raquo;</a></p>
+                <p>Description of products here.</p>
+            </div>
+            <!--end of img-->
+           </div>
+            <!--end of col-->
+            <div class="col-md-4">
+            <div class="homeImg">
+                <h3>Title</h3>
+                <%= image_tag("webdevcloud.jpg", class: "img-responsive", id: "productLine2") %>
+                <p><a type="button" class="btn btn-primary"  href="#portfolio" data-toggle="item3" data-placement="bottom" title="Go to portfolio">View More &raquo;</a></p>
+                <p>Description of products here.</p>
+            </div>
+            <!--end of img-->
+            </div>
+            <!--end of col-->
+            <div class="col-md-4">
+            <div class="homeImg">
+                <h3>Title</h3>
+                <%= image_tag("webdevcloud.jpg", class: "img-responsive", id: "productLine3") %>
+                <p><a type="button" class="btn btn-primary"  href="#portfolio" data-toggle="item3" data-placement="bottom" title="Go to portfolio">View More &raquo;</a></p>
+                <p>Description of products here.</p>
+            </div>
+            <!--end of img-->
+           </div>
+            <!--end of col-->
+          </div>
+            <!--end of row-->
+
+
+
+
+
+
+
 </div>
+<!--end of container-->
 </div>
+<!--end of home-->
