--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,18 +39,19 @@
       
     </div>
 </nav>
-   <div id="content">
-     <div class="container-fluid" id= "billBoard">
-        <h1 style="padding-top: 2%;">Name of store</h1>
-        <h2 style="padding-top: 1%; padding-bottom: 1% ">Slogan</h2>
-        </div>
+   
     <%= yield %>
     
+    <div id="content">
+       <div class="container-fluid" id= "billBoard">
+        <h1 style="padding-top: 2%;color: orange">The Shirt Store</h1>
+        <h2 style="padding-top: 1%; padding-bottom: 1%; color: orange">We find, we sell overstocked shirts at a huge discount!</h2>
+       </div>
     </div>
-    
- <div class="container-fluid" id= "footerInfo">
-        <p style="padding-top: 2%;">Contact Info:</p>
-        <p style="padding-bottom: 2%;">Disclosures and Notices:</p>
+
+       <div class="container-fluid" id= "footerInfo">
+        <p style="padding-top: 2%;">Contact Info: Service@OverStock.com</p>
+        <p style="padding-bottom: 2%; margin-bottom: 0%;">Disclosures and Notices: We do not own any products we are an affiliate partner, and this an example site.</p>
         </div>
   
   
