--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -7,6 +7,7 @@ Body {
     color: black;
     font-family: Verdama, Helvetica, Arial, serif;
     font-weight: 100;
+    position: relative;
 }
 h1, h2, h3 {
     color: black;
@@ -22,14 +23,17 @@ h4 {
   text-decoration: none;
   float: center;
   display: block;
-  padding-top: 0.75em;
-  padding-bottom: 0.75em;
+  // padding-top: 0.75em;
+  // padding-bottom: 0.75em;
   text-align: right;
   padding-right: 25%;
   padding-left: 25%;
   background-color: black;
   text-transform: uppercase;
   letter-spacing: 0.05em;
+  z-index: 1;
+  position: fixed;
+  width: 100%;
   
 }
 #navLinks a:hover {
@@ -61,16 +65,11 @@ h4 {
 }
 #billBoard {
   padding: 0px;
-  background-image: url(/assets/woodtexturebanner.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  border-style: solid;
-  border-width: 2px;
+  
 }
 #billboard, h1, h2 {
   color: white;
-  text-shadow: 2px 2px black;
+  
 }
 
 // end of content template
@@ -80,8 +79,12 @@ h4 {
 .about,
 .shop,
 .blog {
-  padding-top: 0%;
+  padding-top: 2em;
   padding-bottom: 5%;
+}
+
+p {
+  text-align: center;
 }
 
 .discription {
@@ -89,8 +92,9 @@ h4 {
 }
 // end all pages
 // start home
-.homeImg h3 {
+.homeImg, h3 {
   padding-top: 10%;
+  text-align: center;
 }
 .home h2 {
   padding-bottom: 0%;
@@ -101,6 +105,7 @@ h4 {
   padding-top: 1%;
   padding-bottom: 2%;
   margin: 0px;
+  display: center;
 }
 // end home
 // start contact
@@ -124,18 +129,68 @@ footer p {
 }
 #footerInfo {
   padding: 0px;
-  background-image: url(/assets/woodtexturebanner.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  border-style: solid;
   border-width: 2px;
   padding-left: 5%;
+  background-color: black;
 }
 #footerInfo p {
+  text-align: left;
   color: white;
-  text-shadow: 2px 2px black;
+  
 }  
-
-
 // end of footer
+//image gallery
+#carouselExampleIndicators {
+  padding-bottom: 5%;
+}
+.gallery {
+    border: 1px solid #ccc;
+}
+
+.gallery:hover {
+    border: 1px solid #777;
+}
+
+.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+.desc {
+    padding: 15px;
+    text-align: center;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .responsive {
+        width: 100%;
+    }
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+//end image gallery
+  
+ 
