still trying to get images to work from files

--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -26,7 +26,7 @@
         </div>
         <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href=image_tag("shirt1.jpg")>
+    <a target="_blank" href="/assets/shirt1.jpg">
         <%= image_tag("shirt1.jpg", class: "img-responsive", id: "productLine1", alt:"Mountains",  width:"600", height:"400")%>
       <!--<img src="img_5terre.jpg" alt="Cinque Terre" width="300" height="200">-->
     </a>
@@ -43,7 +43,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href=<%= image_tag("shirt2.jpg")>
+    <a target="_blank" href="/assets/shirt2.jpg">
         <%= image_tag("shirt2.jpg", class: "img-responsive", id: "productLine1", alt:"Mountains",  width:"600", height:"400")%>
       <!--<img src="img_forest.jpg" alt="Forest" width="600" height="400">-->
     </a>
@@ -59,7 +59,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href=image_tag("shirt3.jpg")>
+    <a target="_blank" href="/assets/shirt3.jpg">
         <%= image_tag("shirt3.jpg", class: "img-responsive", id: "productLine1", alt:"Mountains",  width:"600", height:"400")%>
       <!--<img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">-->
     </a>
@@ -75,7 +75,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href=image_tag("shirt4.jpg")>
+    <a target="_blank" href="/assets/shirt4.jpg">
         <%= image_tag("shirt4.jpg", class: "img-responsive", id: "productLine1", alt:"Mountains",  width:"600", height:"400")%>
       <!--<img src="webdevcloud.jpg" alt="Mountains" width="600" height="400">-->
     </a>
