done this will do 3.11

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,8 +44,8 @@
     
     <div id="content">
        <div class="container-fluid" id= "billBoard">
-        <h1 style="padding-top: 2%;color: orange">The Shirt Store</h1>
-        <h2 style="padding-top: 1%; padding-bottom: 1%; color: orange">We find, we sell overstocked shirts at a huge discount!</h2>
+        <h1 style="padding-top: 2%;color: blue">The Shirt Store</h1>
+        <h2 style="padding-top: 1%; padding-bottom: 1%; color: blue">We find, we sell overstocked shirts at a huge discount!</h2>
        </div>
     </div>
 
