--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -3,16 +3,16 @@
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style = "padding-top: 5%" >
           <div class="carousel-inner"  >
             <div class="carousel-item active">
-                <%= image_tag("shirt1.jpg", class:"d-block w-25", id: "productLine1", alt:"First Slide", style:"margin: auto")%>
+                <%= image_tag("shirt1.jpg", class:"d-block w-35", id: "productLine1", alt:"First Slide", style:"margin: auto")%>
             </div>
             <div class="carousel-item">
-                <%= image_tag("shirt2.jpg", class:"d-block w-25", id: "productLine1", alt:"Second Slide", style:"margin: auto")%>
+                <%= image_tag("shirt2.jpg", class:"d-block w-35", id: "productLine1", alt:"Second Slide", style:"margin: auto")%>
             </div>
             <div class="carousel-item">
-                <%= image_tag("shirt3.jpg", class:"d-block w-25", id: "productLine1", alt:"Third Slide", style:"margin: auto")%>
+                <%= image_tag("shirt3.jpg", class:"d-block w-35", id: "productLine1", alt:"Third Slide", style:"margin: auto")%>
             </div>
             <div class="carousel-item">
-                <%= image_tag("shirt4.jpg", class:"d-block w-25", id: "productLine1", alt:"Fourth Slide", style:"margin: auto")%>
+                <%= image_tag("shirt4.jpg", class:"d-block w-35", id: "productLine1", alt:"Fourth Slide", style:"margin: auto")%>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev" style="background-color:silver">
@@ -26,7 +26,7 @@
         </div>
         <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="/assets/shirt1.jpg">
+    <!--<a target="_blank" href="/assets/shirt1.jpg">-->
         <%= image_tag("shirt1.jpg", class: "img-responsive", id: "productLine1", alt:"Mountains",  width:"600", height:"400")%>
       <!--<img src="img_5terre.jpg" alt="Cinque Terre" width="300" height="200">-->
     </a>
@@ -35,7 +35,8 @@
         New Ultimate Fit</br>
         Textured Fabric is Soft, Light and Breathable</br>
         Material Wicks Sweat and Dries Really Fast, Anti-Odor Technology</br>
-        Mesh Insets on Sleeve Cuffs for Added Breathability
+        Mesh Insets on Sleeve Cuffs for Added Breathability </br>
+         <%= link_to "See all offers!", simple_pages_shop_path%>
     </div>
   </div>
 </div>
@@ -43,7 +44,7 @@
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="/assets/shirt2.jpg">
+    <!--<a target="_blank" href="/assets/shirt2.jpg">-->
         <%= image_tag("shirt2.jpg", class: "img-responsive", id: "productLine1", alt:"Mountains",  width:"600", height:"400")%>
       <!--<img src="img_forest.jpg" alt="Forest" width="600" height="400">-->
     </a>
@@ -52,14 +53,15 @@
         New Ultimate Fit</br>
         Textured Fabric is Soft, Light and Breathable</br>
         Material Wicks Sweat and Dries Really Fast, Anti-Odor Technology</br>
-        Mesh Insets on Sleeve Cuffs for Added Breathability
+        Mesh Insets on Sleeve Cuffs for Added Breathability</br>
+         <%= link_to "See all offers!", simple_pages_shop_path%>
     </div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="/assets/shirt3.jpg">
+    <!--<a target="_blank" href="/assets/shirt3.jpg">-->
         <%= image_tag("shirt3.jpg", class: "img-responsive", id: "productLine1", alt:"Mountains",  width:"600", height:"400")%>
       <!--<img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">-->
     </a>
@@ -68,14 +70,15 @@
         New Ultimate Fit</br>
         Textured Fabric is Soft, Light and Breathable</br>
         Material Wicks Sweat and Dries Really Fast, Anti-Odor Technology</br>
-        Mesh Insets on Sleeve Cuffs for Added Breathability
+        Mesh Insets on Sleeve Cuffs for Added Breathability</br>
+         <%= link_to "See all offers!", simple_pages_shop_path%>
     </div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="/assets/shirt4.jpg">
+    <!--<a target="_blank" href="/assets/shirt4.jpg">-->
         <%= image_tag("shirt4.jpg", class: "img-responsive", id: "productLine1", alt:"Mountains",  width:"600", height:"400")%>
       <!--<img src="webdevcloud.jpg" alt="Mountains" width="600" height="400">-->
     </a>
@@ -84,7 +87,8 @@
         New Ultimate Fit</br>
         Textured Fabric is Soft, Light and Breathable</br>
         Material Wicks Sweat and Dries Really Fast, Anti-Odor Technology</br>
-        Mesh Insets on Sleeve Cuffs for Added Breathability
+        Mesh Insets on Sleeve Cuffs for Added Breathability</br>
+         <%= link_to "See all offers!", simple_pages_shop_path%>
     </div>
   </div>
 </div>
