--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,5 +1,6 @@
 
 <div class="home">
+    <div class="container-fluid">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style = "padding-top: 5%" >
           <div class="carousel-inner"  >
             <div class="carousel-item active">
@@ -23,6 +24,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
+        </div>
         </div>
         <div class="responsive">
   <div class="gallery">
